updated frontend, made it responsive, added css and content

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
-
 {% block content %}
-
-<div class="card text-center text-white bg-dark" style="border-radius: 10px; width: 36rem">
-    <div class="card-body">
-        <p class="card-text" style="font-size: 30px"><i class="fas fa-laptop"></i></p>
-        <p class="card-text" style="font-size: 22px">
-            Привет! Меня зовут Анастасия Ванян.<br>Я начинающий Back-End разработчик.
-        </p>
-        <p class="card-text">{{ about_me.text }}</p>
-        <p class="card-text" style="font-size: 30px">
-            <i class="fab fa-python"></i>&nbsp django &nbsp<i class="fab fa-git-alt"></i>&nbsp
-            <i class="fab fa-github"></i>&nbsp&nbsp<i class="fab fa-bootstrap"></i>
-        </p>
+  <div class="row">
+    <div class="col-md-4" style="margin: 0 auto 2rem auto;">
+      <div class="card text-center text-white bg-dark" style="border-radius: 10px">
+        <div class="card-body">
+          <p class="card-text" style="font-size: 30px"><i class="fas fa-laptop"></i></p>
+          <p class="card-text" style="font-size: 22px">
+              Привет! Меня зовут Анастасия&nbspВанян.<br>Я начинающий Back-end web разработчик.
+          </p>
+          <p class="card-text" style="font-size: 16px">{{ about_me.text }}</p>
+          <p class="card-text" style="font-size: 30px">
+              <i class="fab fa-python"></i>&nbsp django &nbsp<i class="fab fa-git-alt"></i>&nbsp
+              <i class="fab fa-github"></i>&nbsp&nbsp<i class="fab fa-bootstrap"></i>
+          </p>
+        </div>
+      </div>
     </div>
-</div>
-
+  </div>
 {% endblock %}
