--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -53,7 +53,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">
+        <a class="nav-link active" aria-current="page"
+           href="https://github.com/anvandev/portfolio/blob/master/static/Resume_Anastasia_Vanyan.pdf">
           <i class="fas fa-file-download"></i>&nbsp Резюме
         </a>
       </div>
