--- a/portfolio/templates/portfolio/resume.html
+++ b/portfolio/templates/portfolio/resume.html
@@ -46,8 +46,8 @@
         </table>
       </div>
       <div class="card-body text-center">
-        <a href="#" class="btn btn-outline-light" style="border-radius: 10px">
-            <i class="fas fa-file-download"></i>&nbsp Резюме</a>
+        <a href="https://github.com/anvandev/portfolio/blob/master/static/Resume_Anastasia_Vanyan.pdf"
+           class="btn btn-outline-light" style="border-radius: 10px"><i class="fas fa-file-download"></i>&nbsp Резюме</a>
       </div>
     </div>
   </div>
